src/pages/about/about.page.scss
.about-page {
  ion-list-header {
    font-size: 2rem;
    font-weight: 600;

    ion-icon {
      width: 3vw;
    }

  }

  ion-label  { white-space: normal }

  .logo {
    margin-top: 5vh;
    margin-bottom: 5vh;
    color: $atp-light-blue;
    text-align: center;
    font-size: 2rem;
    font-weight: 500;

    img {
      width: 15vh;
    }
  }

  /* Accordion item expand */
  .item-expand {
    position: relative;
    width: 100%;
    max-height: 0;
    transition: max-height 0.1s ease-out;
    overflow: hidden;
  }

  .item-expand.inactive:after {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 15px;
    width: 100%;
    display: block;
  }

  .item-expand.active {
    max-height: 200px;
    transition: max-height 0.3s ease-out;
  }
}

